--- a/css/style_folio.css
+++ b/css/style_folio.css
@@ -112,3 +112,13 @@ h5 {
   display: inline-block;
   color: #34495e;
 }
+
+.inventor {
+  width: 100%;
+  margin-top: 40px;
+}
+
+.inventor iframe {
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
