--- a/css/style_folio.css
+++ b/css/style_folio.css
@@ -113,7 +113,7 @@ h5 {
   color: #34495e;
 }
 
-.inventor iframe {
+iframe {
   margin-top: 80px;
   margin-left: 50%;
   transform: translateX(-50%);
