--- a/msc/bigger_picture/scss/style.scss
+++ b/msc/bigger_picture/scss/style.scss
@@ -108,8 +108,6 @@
     color: #ecf0f1;
     padding: 50vh 0px 0px 0px;
     & h1 {
-      &.top {
-      }
       margin-top: 30px;
       margin-left: 50%;
       margin-bottom: 30px;
@@ -119,6 +117,7 @@
   .testImg {
     position: absolute;
     top: 50px;
+    right: 10px;
     width: 100%;
   }
 }
@@ -138,13 +137,14 @@
       &.pageTwo-text {
         padding: 80px 80px 80px 80px;
         & p {
-          margin-top: 30px;
+          margin-top: 0px;
         }
       }
     }
     .flow-chart {
+      //border: 3px dashed red;
       vertical-align: top;
-      //width: 100%;
+      width: 45vw;
       //display: inline-block;
       //vertical-align: center;
     }
