--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@
   background-image: url("https://oddert.github.io/folios/polymat/img/polymat_banner.jpg");
 }
 .col-sm-4.project.zugriff {
-  background-image: url("https://oddert.github.io/folios/zugriff/img/zugriff_banner.jpg");
+  background-image: url("https://oddert.github.io/folios/zugriff/img/zugriff_banner.png");
 }
 .col-sm-4.project.station {
   background-image: url("https://oddert.github.io/folios/station/img/station_banner.jpg");
