Fixed a banner image extension for stock market app

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@
   background-image: url("https://oddert.github.io/folios/code/img/simon_banner.PNG");
 }
 .col-sm-4.project.stock {
-  background-image: url("/folios/code/img/stock_banner.PNG");
+  background-image: url("/folios/code/img/stock_banner.png");
 }
 .col-sm-4.project.calc {
   background-image: url("https://oddert.github.io/folios/code/img/js_calculator_banner.PNG");
