--- a/css/style.css
+++ b/css/style.css
@@ -203,34 +203,34 @@
   margin-top: 15%;
 }
 .col-sm-4.project.polymat {
-  background-image: url("https://oddert.github.io/folios/polymat/img/polymat_banner.jpg");
+  background-image: url("/folios/polymat/img/polymat_banner.jpg");
 }
 .col-sm-4.project.zugriff {
-  background-image: url("https://oddert.github.io/folios/zugriff/img/zugriff_banner.png");
+  background-image: url("/folios/zugriff/img/zugriff_banner.png");
 }
 .col-sm-4.project.station {
-  background-image: url("https://oddert.github.io/folios/station/img/station_banner.jpg");
+  background-image: url("/folios/station/img/station_banner.jpg");
 }
 .col-sm-4.project.longevity {
   background-image: url("https://goo.gl/qtFQKB");
 }
 .col-sm-4.project.sparda {
-  background-image: url("https://oddert.github.io/folios/sparda/img/sparda_banner.jpg");
+  background-image: url("/folios/sparda/img/sparda_banner.jpg");
 }
 .col-sm-4.project.margate {
   background-image: url("https://goo.gl/oEyn6i");
 }
 .col-sm-4.project.fusion {
-  background-image: url("https://oddert.github.io/folios/fusion/img/fusion_banner.png");
+  background-image: url("/folios/fusion/img/fusion_banner.png");
 }
 .col-sm-4.project.thematic {
-  background-image: url("https://oddert.github.io/folios/thematic/img/thematic_banner.png");
+  background-image: url("/folios/thematic/img/thematic_banner.png");
 }
 .col-sm-4.project.victorinox {
-  background-image: url("https://oddert.github.io/folios/victorinox/img/victorinox_banner.png");
+  background-image: url("/folios/victorinox/img/victorinox_banner.png");
 }
 .col-sm-4.project.ccv {
-  background-image: url("https://oddert.github.io/folios/ccv/img/ccv_banner.jpg");
+  background-image: url("/folios/ccv/img/ccv_banner.jpg");
 }
 .col-sm-4.project.adv_art {
   background-image: url("https://s-media-cache-ak0.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg");
@@ -242,34 +242,34 @@
   background-image: url("https://oddert.github.io/folios/arkwright/img/arkwright_banner.jpg");
 }
 .col-sm-4.project.dog {
-  background-image: url("https://oddert.github.io/folios/higher_assignment/img/higher_assignment_banner.jpg");
+  background-image: url("/folios/higher_assignment/img/higher_assignment_banner.jpg");
 }
 .col-sm-4.project.dungeon {
-  background-image: url("https://oddert.github.io/folios/code/img/dungeon_crawler_banner.PNG");
+  background-image: url("/folios/code/img/dungeon_crawler_banner.PNG");
 }
 .col-sm-4.project.vote {
-  background-image: url("https://oddert.github.io/folios/code/img/voting_app_banner.PNG");
+  background-image: url("/folios/code/img/voting_app_banner.PNG");
 }
 .col-sm-4.project.nightlife {
-  background-image: url("https://oddert.github.io/folios/code/img/nightlife_app_banner.PNG");
+  background-image: url("/folios/code/img/nightlife_app_banner.PNG");
 }
 .col-sm-4.project.recipies {
-  background-image: url("https://oddert.github.io/folios/code/img/recipe_book_banner.PNG");
+  background-image: url("/folios/code/img/recipe_book_banner.PNG");
 }
 .col-sm-4.project.XO {
-  background-image: url("https://oddert.github.io/folios/code/img/tic_tac_toe_banner.PNG");
+  background-image: url("/folios/code/img/tic_tac_toe_banner.PNG");
 }
 .col-sm-4.project.simon {
-  background-image: url("https://oddert.github.io/folios/code/img/simon_banner.PNG");
+  background-image: url("/folios/code/img/simon_banner.PNG");
 }
 .col-sm-4.project.stock {
   background-image: url("/folios/code/img/stock_banner.png");
 }
 .col-sm-4.project.calc {
-  background-image: url("https://oddert.github.io/folios/code/img/js_calculator_banner.PNG");
+  background-image: url("/folios/code/img/js_calculator_banner.PNG");
 }
 .col-sm-4.project.moreCode {
-  background-image: url("https://github.com/Oddert/oddert.github.io/blob/master/folios/code/img/more_code_projects.png?raw=true");
+  background-image: url("/folios/code/img/more_code_projects.png");
 }
 
 .green {
