changed an index href to see if it will break becuase I dont know what I was on when I made this

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@
   background-image: url("https://s-media-cache-ak0.pinimg.com/564x/2b/df/87/2bdf87448c5031f66f68000163ab348b.jpg");
 }
 .col-sm-4.project.arkwright {
-  background-image: url("https://oddert.github.io/folios/arkwright/img/arkwright_banner.jpg");
+  background-image: url("/folios/arkwright/img/arkwright_banner.jpg");
 }
 .col-sm-4.project.dog {
   background-image: url("/folios/higher_assignment/img/higher_assignment_banner.jpg");
