--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <title>Robyn Veitch Portfolio Page</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <link rel="stylesheet" href="../css/style.css" type="text/css">
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
