Locally hosted folio thumbnail images were loading in too slowly in github pages, I swapped them out for links to the same files hosted on google.

--- a/css/style.css
+++ b/css/style.css
@@ -203,34 +203,34 @@
   margin-top: 15%;
 }
 .col-sm-4.project.polymat {
-  background-image: url("/folios/polymat/img/polymat_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/-cUETUFeteo970YUFMBwwXhAS_MRCpRsTYtWI_ayadEhgN4i5PBMTO1E11wZeCH9ApdBujGhqEAUbQr1JFaRhaQMB5-zDKre2moTxsyWptxFwYqB9acmTIu62L6Fx9PaE4xf8dFyeIkiYo6AJfV96lIqGnXiQsOvtJDQI5GXkRUffbertYT2x0fs-bTiiJ95NKGZjJuO7VsLU5BSyj5uMlKAWfaCrNA37XJ3ztpBpNFVdruckCkRu66Qm6Y2XXWQRdeEHw6rCAJS_Ia2SyMQemxacTWcmv1YIBCNWD1552IS_Rwg84oW5hweRwE5HhkWgNYDMlHybsIILh5tnpTTdY68Mbz2oD6HtfQScaK9jOk6WXJmDQS1QrmBZ4ozvSX2XAGb9wq69-ZMV3DKTfx0-mAHPTDHjw-w_Z0T17Xb3LcZpM9i0_2rSqqQCPCe2MXp431e9qJq-YOcHiur02ESE9LLSD_1JPKMWkw9VK408_91uBfELbZSg0T02boomaxS92HygArCYhsEmFxdtfkYdiWHfj-6axHdJ7eRrjEvJN9O-EsyhipSJrZ5eVHFuFr2XVDMOKKFEaI2eSn-BJ3xMhw3XnJAM6CM4_z1DgGH=w1364-h768-no");
 }
 .col-sm-4.project.zugriff {
-  background-image: url("/folios/zugriff/img/zugriff_banner.png");
+  background-image: url("https://lh3.googleusercontent.com/3KV1bF6X3BSgrOitX0qvkh_6FbaLCpJ1fOMmRjYUyboLkpFwuZ7Ww_jmqYxclxvOiDkdipvB251SMt6GK9U0Y_ygu_txRuHrXjDaHEOeSjcvaeEYwaUWy-dvg1pOcDIyu0gTRDH_PVvUrpetZSD9K131SrrC-xdiC0qIf8AiA3kVthMWhplbKB4iXkcC_5fbBjezEZDmjqYKDS50Q8RDioHUeMEykCtMpfmt9UBq3fwZdjlVFT-WILLzHCppPV20cq_ED90p81loQpKp-r6Q4TU4e5_tbh_mO2HlUC8NFgM4_o0e0m9g1zlzfeKPlqfOpqXQ5C5b3YlhjRuiJ1oT3-eLAWGaaldzciFWyuddfXrWfKoEzSDW5GdwbQd6wPPmw3V-atuZvmsEOwR-EhrMNZdXxZFvJ_NPIdeK1ZpI4b4ZHuHxrf626bAsy1M5uToS-FTeBlNzQzQrFcKiEB9AUFHi_MsKIkl-Rc4MtPBWUeHPK22r7BqgNtg2JIrPuWhSyY2_mxqVWC4aI7ZOI11k9iMzmva02h9Pl1T-XMxb7VzEN-3mDG85wUBwNAuZvtkOvfNROJe1iyBJ-YFG-L2DDUB1u5eheWIBqz9DTM9b=w794-h596-no");
 }
 .col-sm-4.project.station {
-  background-image: url("/folios/station/img/station_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/jfsYnNrUIX029BsX70h2OHLGxrJ76AZKTND4JgR577yJIMoQtK14RzWfA4WTGmMcM811VHQGxlkcwZaAHPvRYcHdSOgI4L3-LgkK3QHmgeKw8fCIHXj2AoqVInWbsr48zrKpsxV2Z_6EGG-0z88bYIfWPXTBe7ewLJcMX2pxcpl9JJHOJvavR456LbS-W3ELkgoV3ynx-vWdFCEXt8uBjDwCYMUQR8Z2p9Rybcl0rFUi9WKEaZVy-tMClGbCh2i7ztmCnuOpc62Ko4ycT61y7LjDTTyji9hszI6Kopv_0TXjgE-VEtQfAQWMKEEL6lcUcMTpYnLGtu4ya_vAqid4whIJrRkt4VscchM5J_ChmrmEcDdORANR5OujFCOen4t4Bt3xMo99vmYlpcJjLyVk3XV1wZWPLovGB0W7H0q4F0FWAsgSEXJV_psz5U6eD9U_9pHVmOt7XC_ZVIPYfnbDYpJ5zrBvXYKb5MtZwMSnzOjdRoCtSIQk0NARFXzJCeRnXqL-39t8hzpHkBmJvSvqHm7nuFVy52rUVIoNvTb1gyiKdwZKR4TnmSvvCZkINS2XYCI0HJakI_8XPV_PnTsIr_IelqSacOrW7yoYhTRg=w1200-h700-no");
 }
 .col-sm-4.project.root {
-  background-image: url("/folios/root_to_root/img/root_to_root_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/GSkp14aR8bHSsOnCmioA20swKnbEE-s1Bc_sQqsGS2Uoqfzdoq7dRVVpbfI5gZteliR9uN8Bh_rn391K5QECI2y68m2ua6CQ-4UJ1StTVPlE8YmDeRdeTL1D4PLuokPQb3Lse6bT0rxwKozZrGQOiW0QBT52TGcPtcTSEg5KVfW4Cy94Z4DhFS1-lov7pqtO8GLqhdn577tctjkN2P7WTaOQbTGpM8gkri8bhF15hM3F-PUtx-oNpOJBSUQM9g_iGjeom0gF_8mk2C53dYf20haZhitpztOvSNMB7sHRZbZSR3KSJnZ-8OlnhzeeNT7CR0xJtoxKSAHKsH_NLceFV2Wvyj7x9JMO_n_PXqIENh5TbNhGInch-YdkLukaP9kZ5fWF_R8h-3msGdJZ4I3mo7MZKu9KZ_rZINVXN5Y0v1OHunDTWJCi8FyRaavBh0SUBlZzEfY3CvB1mlQFG6xENogSmUPftExOy_dVt9vCnPSfdmHvx0Z4aGNJX3jncxv3VD0cmmo8H6wAY3J1tYjsXKYKsKbzi_sbkPJ1ePS3tiujRjgetXL68VHfl_PKwbH5Po6vkTYbwAKsh0E3DoyMp7H7rC1gWPlL4FDr_QBU=w1364-h966-no");
 }
 .col-sm-4.project.sparda {
-  background-image: url("/folios/sparda/img/sparda_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/r4aSs2smYKPn-8AHIh8bUwCc4GISBo955XKGxCVPrNsfoerxjx6n2K2AOtOn0NPebILQQsDqp4Ok6QxR4cljdHSjrlj81pBN5kpBPS0GMUFZk6_MiirT8T_jhoIb3eBgfmldD18ivz0V05bnQqtDmjY3qqxgsJiTMFjlGvq1E8dswQwzqYvPO5CT5Z3_7oocqq464HHnTmPbgsG580-Z98u9eloGv0l6ln4yY3zU_YUYvQLQqUJedW88CV1QyI5tkTOdttemULKaZ0JxH9EwG1s62-0U8cqRE-zqOkgVP8nxCkLTYArD2WS7GjmqrybArvIxz5hT-kxgxHHTexWPliEivLHko6wyYVWY3xQDwr9YBC_qza073wodbZ2EHOLiNi6wDM369avlAaRybrNnJW2mPViITccvxPPr8MGyMyZViv9GaFsQgQqsl2A6wM0MZHTmwCesOq8jKI8htfYwy_6kCml6K1p51aG6V-iXGDx9LnO1uY4hd3e-Zr5SBZlG9jtQlL04r5_iHOAFvA8t-fmtkLfrj6WPsOacz9c-qs50rKG7YIZDbC7oFlMbrZm9azkQf4SlKP_nmR3gWa7uc9PbadhQF1THZ_ahpnm-=w1364-h1014-no");
 }
 .col-sm-4.project.margate {
   background-image: url("https://goo.gl/oEyn6i");
 }
 .col-sm-4.project.fusion {
-  background-image: url("/folios/fusion/img/fusion_banner.png");
+  background-image: url("https://lh3.googleusercontent.com/tzbfjsgDtTBI0aVEPlqKZnucVsGNQu1I8ssIGZSD6ilP4V8vVaLFMAAJ0PGLWW5msI3cd82GQFsz-KRA7cRGYeIGT7k9Y_FGq6Ia9ogLCo5wSX1tl0-adrJXXtIWhN8R5qhxyyies23eqXycgZ1IPPZVJOYKx_ehvVt6ext5sM7Hib16IAjxM8B5MdWMUldMksqLA2nbO6Qftl7iGMiFzt6VK2t0C_t0SLWJfZZmxs2l1IYfkHBCidYVEBcNwj-rxWg8G2PVuu1vtNsil1hzptcx_o-PnxV68nTETrM2GSVkV5rGmxvU58gfnXU-GafwW813dsWwdF2XwtAw0V4YdPsmnfz__TpLmIQcl9eQ_NzLm-DeF9MYhOiOOZWSe2aUIVHcDca6IETyjr-EzqDNnTRa8ppujcoQDSy_bt8bND41hY2MJwwofxNKJJ6QQr_TNE-LZXX4d5EiaQzC1nV_IGKuBQnT29JJWVZ5K4Ms-eUOXQb-XRtp8NtmLQlgWx3z1BhbsBVHGmUCABX045QJh07ZrX2aliyIVzhfN5L5pAyaXwOgMKgri7O__TZfF9ZfBVEGdTXuTR2jRBvRIYtXM-okruJfhSuiNOG5kRhW=w1364-h966-no");
 }
 .col-sm-4.project.thematic {
-  background-image: url("/folios/thematic/img/thematic_banner.png");
+  background-image: url("https://lh3.googleusercontent.com/uTgIHgm1L48KBX3ImVe9kxD1DmkmmqkA4iboB9QRJOIMljjVuBLOIfqX3AjYo1MRIN-JZmdxDiAjskWCOC7n5axOTlPnYYcRnpCw3Xh7mnxSyZX1X3qSYVRnNeZJ8tAlosXKdTS5wR2PiwmU0ijNwW78nhzZW1LS42ljTxkxmunk0dN6_duYHlDAiCQHHhDVkcYtOLZYyWSx8ubSP2tWmtCyt7ESoHMDuam1vuXX9N__o0cGqAvydmFpgu-5cxvmgtL4zycZMd89lDvkjQb0-yXfEzyf32y1hDJtVho4rEKsUBaSM8G4mpgkin3U9eOsax7O6Qy4kHC7b6j1jTdDd_7gi3oxGbkyJIeRNhEjQLhfQ1L113bUfE4xGKaKAh3tC2Ta8mcpLwzuhst794GP0QeHTZdtF50l2jys9KlA78Wh4nKvNSPjOXX-oye4IV0kZ0vKAa2KSvhzekYBW42SJtvAenOneFXmNATWzxZd1vmW45QLUOXk5GBMcbSuPYzm4XKEiUIFmibIYxVn0i-ZYATcjIHTqZIq91LHLMB9CaVhYL2NrxjQlqxogaP-fk36LMUtX53TDpxG-RI05Ry2K47yeOg-TIzWbxsE01KL=w1364-h966-no");
 }
 .col-sm-4.project.victorinox {
-  background-image: url("/folios/victorinox/img/victorinox_banner.png");
+  background-image: url("https://lh3.googleusercontent.com/fZamVhUdsGR7pBfiFYrigY3FI-QMU8Qi4I6ZhEnP1IM91CzI6U88wWRc6dBw2u4Q5NFtMWgT8EoFLiI4L_qhHC0QwvNDZF6KE6aDYtwq_NCBU-bttoBgPrGSy5pGvuJP4h-okVpbcx3ZJ0vCjnGO4eUs1UOswE-hgr9m6pDLBsECGPskd39VAX-iM-jbaTeGLn-exV8aNQ5T3YyccoYe4jyGiWrXJiJGoPONxNpBbQ4xx402GRRFp9ThsR9O5MewocmEm5H24TymF5FSX_az1jKpldjuyXjq_yn3ZR7jiQWDVmCpib7ZcBlxa0IbeU8MxLyhalyzEmFT3tvYEu61wNcOIVgkzjCvc97ln6Lz3tp565rPdN07ls-eCwp6-nIJN_XSihBlGkTbJSw-zrvfX-pURdBQu-u-ZjFJJ5JXupx_98ZG90UwSxNWaY4CtEzHG_3gyR4dXHvMDY9pYbJ57Q6AXhfHOCRSulH8YID6UlLf7M2Z5I2txNz7nzJy-i4k6zhBH_hGtBrj22CGs-__Mekq6LGxT6WhjuEv81y2d9zfea9Vw5QR1zN0JD-W-3Zgfhv0eGNVHEvCsJLQIVQnXWO51JsMI4erO6f4mR6F=w1364-h1192-no");
 }
 .col-sm-4.project.ccv {
-  background-image: url("/folios/ccv/img/ccv_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/hEVhzuIiAoUZ2ehRf07N_GKS-CZZzGvPfGZdFhKWtNfPkqS0BGSNwKR-0qipW4Mk2-3GnMa5Bq22ibGi9sJ8QctJuz2iazQEhHDiWpTyi9v5fQGjTd862qiP8dwlEvBHIB--rVYapu_0613hZovfjPtd0LTGXlic_Ajk_8NCdcItIUYRjiBKNyKWiD6hPZhMPTbqcp5vuVvmNGtmX700eyBMyIse-0TL9H9tDsMZW3PZ2cSoMjuh2y_9qB7cOAS9Wybd_Widu7Cq1QTq60sBUUSl66otvjH87gVDSU3HcWvDbRcEWavpRDVfkmNmVpwgkQgr2lQnLwUtH3osl8zSetXsZytOe9k_ewwO3xmNfcZEeKr3lqLwD0Ux6v3h-w0zC4YEhSfth57umeLftxtoSKshY_IjWGCflu7Exg1MLFCdfDzKnkBisR_FqlME9jMpV3GrX91AJIFyeGC4vuDuXnGzL28PHvbEE2jSxTivj0ZBefiX2kPYkrC_FbuC_NgkuG8qkYfx3E29We1uT49Oi0MVrPQcanyyNRV1PJIA0u8Pbqk1FvMbS2lYkQk2adYJJ16d6p6sL081HQ7N9qPXi-BfwfOyJx9n7EGjYbJu=w800-h600-no");
 }
 .col-sm-4.project.adv_art {
   background-image: url("https://s-media-cache-ak0.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg");
@@ -239,40 +239,40 @@
   background-image: url("https://s-media-cache-ak0.pinimg.com/564x/2b/df/87/2bdf87448c5031f66f68000163ab348b.jpg");
 }
 .col-sm-4.project.arkwright {
-  background-image: url("/folios/arkwright/img/arkwright_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/bLVOrg5C_BSRCOSASIUuJ9ooSVW6dIHYjgFK_vMg87F6ZNa83KLqVni1rw3BIJ8MoK_aKR7be7CRmnFUzZG1B2WXSBSiAp4OqgNelg6tinQ_UpB1vIvFrMXWxXKIeyg67kni3nH7gGmrHSvAFdFrEIPuDI2Bb-dBKhcwgan3a3RjFjSWNAnQJR5VjVYHuULll4JYbNxuXCNd8Kt0L_o0r7xrZ2ma7_DHDjYKmgkY7zvDnggsSbL_DXRdLXdippdr3yTE7K0EWXHFJ7pt1JDexLdnxbewGPLiKBGIRr6AIJkrTy9sbrJY6xrKvzT9bLgKpuDtxfcpeKwJpzRXmTOL_r53qLYLUfB3JkUW_ybrH5sUwApZF7RfMVNDqRsLQOcxnR3DMQHXK9iO2TB1AmQ_9dil04Dj8NiamuIynaab3_v0SBCjTyPF6fhlKDlwAH-Os6owOyMbGDjWE0lmDln3PGjjlYuGyRXaFNi3sPbSND50jpGtq4FwpUTC266IzYjhrkokV3fNMNPzsAaBOOoFT8KRPclZiZS8_oHODFTsUfTtfXvNCDathWs-JVWUBJeEDySEaobc9_V8IYhQJgD3s09X0xIEId4c0h58ycl3=w1364-h768-no");
 }
 .col-sm-4.project.dog {
-  background-image: url("/folios/higher_assignment/img/higher_assignment_banner.jpg");
+  background-image: url("https://lh3.googleusercontent.com/c5ZtEXcIu5GrNmsJvFwckeJqzcvucrJnHGDIGEm9XytGWfFDBVzgr-_rEcUio6VWwYasVvJZHqxmPeQQ5B_lAUPiDEGhopNkA2jF910jK44wzS6KLVShL8PR87dOEJ1oK400XJxRhzhgQf10cE_CXv5OhqDqtB1LlWQGEyrKeelsghSbErVllGWQrEpCOhT35_9xfJXMyXUC_t-XfVUBINQu_roIwAqco2i5Fl_IsYJe48DU-lne1eNvbScYYlQb1upW9BrDBqJzxfk2MkKL8wQ6RUxjQpJPhHFq3Og_o51X-bHjA0M8WjUj0wfZ16hWoayCQagPBu4ju-vnMw7yI6LoirqY1XQKNQMjwOYUH798FONzCGjVK7f3kRa2m_IHDDSVpXQE1Xt-Sr7i5cxmn7e6v60Nqzsy6-Xwsr6zk-QP59XQ2cONC_Sbsb8cHOn1iVSDnJRHIeA4aD-w_4zHQK_2ClpVrnu_SrQvI8p_YnLc4DHO25use6ucshcnNiURv-AnkTFeBa-SL2utqOA7tEgjqNJYLPIzy_-ROhIIUtyxarbYw_jhB3VbwrvAmLnT4W4V_7R2g6a6zHq1Z7PvtEmaA-4u9vPNLAZVMjke=w1340-h1522-no");
 }
 .col-sm-4.project.longevity {
   background-image: url("https://goo.gl/qtFQKB");
 }
 .col-sm-4.project.dungeon {
-  background-image: url("/folios/code/img/dungeon_crawler_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/OAD8m4PoL1-Q2NBZwW8sRCsKoFE6Xba-83efChKr5KFtYbj3KXjXR3azwRe3q6_FxlTUY3bMlrLgVPMxdIWj9yZhSU5z-Xwij7kgqZiSa0Ok43Ukd52mkmOHq9vFTjxOIDh2GSYjGrs5EY8vR6R8DWEOqGbgVJjtu35FSgAdBn6JHRtwTBkV6alPcLWeqItjrxGzDLbrZeE82OTAjd4G1scSgMIzaZRnTljcJw6So447g9K9qLsndPsA7o9ekyFfIZyM0K0k8RYbjbnx_X9I7WA6sVlRq3j4pL99EmZp5NI9d5Ir0bJWLtTPht4QJxcXJPsxVc-xgJg7u58PTMBcfESq5EDoD7fZJBmd4AG75Dr3_PSkQBNaU8CO1BRO4VB6brpLGSsJlGvYNJs5fozQPE1BMIyJbiTUSHU2LT-xru1F3wWPh07N9dfVXQFq6LzocUgeXKIU5lmOX3jMoUoddxqtbWVeS6aPahVLThrI74e_jUodYdWJE53s1ETt8wX78ABdgvDozWiHxFnVqtsUUfuPz_hUOcdNGGesnj0sFG4LkuqX7R2t_-IkPzopv4psImEIa4HBfxDHTmmlUiped-GcPcVwO2sEgagnoHjM=w1364-h720-no");
 }
 .col-sm-4.project.vote {
-  background-image: url("/folios/code/img/voting_app_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/2TTnD2jpJd0YVl_09Q0ckYMbK0egQIuQK94K_earTBWNyHGSd9YPWQ-sybw7zz5I5A_-RTSWR3Ehxm-_k8TJqtRAoOBmuvGcx9vuZ3M7jeOWvPmuNYJfzIPzfNrtSJg2N7wZdqD2oJYerdQem2g4_i4_M9aUnBmCZffWg59c9fHuzOpyQAohzb-t2YDlE81Gh7W3lZnYp4_eQVkaC6Tf54ydViwgC61Bv8IGAKV1JtpzhKls-tftXmGrryJqws6ddMT3sy0loc_Pya-coUz92qJ_JaImQyTNonDWlXQZ3-7QbuNXhPVWUH9gvj4D7CGeAiE-R576TiDpnvWFn0Bl2_SRTq0Rn-2vBqZjFTYbBK4EtEQs26rIcboKTNzj1GPmK2YX3wyXhqeVnZCdim2yNehkiTeKkjQkV9wS70SR-ABGs2wr0UW5l_69PJfL1YNzNLSjf67_nRXHlIbD8btck7oS5UKZTgIwMMEKnW6bZfjXGwWqxp6E7mAxm1j8Tyo2qQu1J66ZiDdN8T5Txx7KH9ePhhYp8NKgTKNqjTV7hoZqFsw50QZ6IOiG5Mwfl2J2hASUYu8SfRSUSq6-I6SwYYDWrMQiWCa_ioqpfq7e=w1364-h790-no");
 }
 .col-sm-4.project.nightlife {
-  background-image: url("/folios/code/img/nightlife_app_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/8C-zLSTa_YrDCTmwjDzdjEjYznYIrs95iTG8zoHz0K34q0f4bT1KxTl3kgoK7fFbI1nDxZ6IpLqzEdtZZj_IpwZ2MFUuoajTjVMkTow5n48fsHagHSrPbyygWgGHycORGXIqsVZsohVZDuC0Bqsg76x190zmqKcn9NrZc3fAx6cvDWPPFzkklXoZWFuMx7AcUe5UXKVVnR8F-Llk4cq2OHclOmuRUydEr5QROkR53vaR2brd3XvNs7BItFM5qJBjZ7TlxzCRCtbeky0mYPUh2kvoCsdsHGgZRM0xx81jvbK2doh9bMhnoaBLpr5aSY5AFMBhhpK3cKGddFvdjSixRR8GZhzW5CIsnLehsFevuy5JHVTxUYBu5bRsir_FItsJLwKf4ah8h-E5cPB9Vr_eeYXvjdJjVXZhR1xAfesYukEZUtBVpcxUOPd7l3vFmU4t4zBSyn507X-UF7zUAP5Q3MtzF884wCsJ8zgJFXH1Ps3g1-rc2ToMQtZh7z5bNloknrGI8wtFkFY2ehQZrs_3MJhxqdx7xE-wH50c75d5r1y_ohU8Gqzpg9JpiYKv3W-OwV7gKe2z7bqWqEHuEy6SEVmpuaLIKl3w-ka686A5=w1364-h754-no");
 }
 .col-sm-4.project.recipies {
-  background-image: url("/folios/code/img/recipe_book_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/RfY0CNsB15ALplQp2u3ah-hW5aAqLhRl3nDT-Xqg-foYhrdiEnkO-_d1bEgsrKz8elP4TVCym9rYdIR-NH1A-jDiHsbgEh5i1xYKV7FsJu6Ho7r5jXYrKwcU5pxLNryjFOgzv7G95RLO1ZepoN6oGh4EMQNx6V5XhrSznc0ZL5O2Ob6mhpgNhcOk5LT7hpgYimDsjkfIgnWdYgtU5NeKFpnR7f2dUdZiTkgydkGgk9fOw526cMivFepp5vDXU84RYi3NtQ3mKEJcblV9QMErUnksOZFgiXEamti24g50R8pJ0BH__FGlGVwOOykW9VpUtG_rqTO9IwEZxupocACGcKisdecOpCjn3QoJTa5-sbAcYI4mVL5kK0TH2N_hZaZNhW1CulfK6xDRyYi7LWGQ-ie5loYflZqrVtGrj4wQfEomYtxUX8Ap5MagvjYlJ8H98-lDI_fvAq5PKS1KYTzACWMuH0mUeLKbCtdZJKRELa7Rtx0BzzJqkw0plvTdzQSRALAP3Uf7KUXuFxfocl5PBs4nCgkoI3IfUbR-C5O1aWHB1aMZnmj2yBJU-csu0OMx-k1Q1gD9nEBCkPMmApBPOTinnUDAs-pshuOQToz8=w1364-h1158-no");
 }
 .col-sm-4.project.XO {
-  background-image: url("/folios/code/img/tic_tac_toe_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/enyQ_Kw2Zf7aOL5xJmn66MEyQKb4LaOoyPkyL8rY7mei12iyHSahywUYZu_iZLAsslfFlbcB6RLShZjFEnYjXq-TItIqGspqgYc5-UEWiR1lzCffE7Pu9tOJNjsZJI2kOK97PaSA2DK57Ur5dnIiWTAW66zkTOjiJP_W1tCaEqgCjSSiWaI2mkWbe5MuHEdsap8KH1qBWgIrwI8jWz2G-U6YnTzNqs-i3d_dN9cbeOLyqJFsZ4I2QF1SEV2l8RcsZJV12edksChVLbtnTP6qLNfYd5DLd3YfbRgjALZsNCMSEvYwgVDU4auekHzIufKs-K9pap6X_V9HFKtQc7T7YiI47jzc-wlWeC6_32B2CEjY-7i_EdLOhWwtNySrA7sFnNilgxrC06_Qhoj4uz15JSG3DwEn3hz7GVeg6X7MD8_KQE2QpH3dIKnqmZEAahZOKCZkrk-D4wDR-2mLiZF2cW8j3SX6a6uEo_b2rY38SxZgJhtQhBcwyP5maKMmUFSdJMTgKYvHpO50E9Q712O2b30Bc0Pe2ghrDlJjiHOGp0jwl2GWBUsV60OwV1McqiEnrKZymjEgYT9Gz-rtUS6s92NUEKwVrk9aE52JEBNV=w1364-h956-no");
 }
 .col-sm-4.project.simon {
-  background-image: url("/folios/code/img/simon_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/aeYYRtFKS_NXMMJJjDztfWyvc2Bv18DcqaGug_QppTmyoEI7vkptGD7kxdKQuntq4jP4EZNQbq7VOnuq_MVVw9cctFAAsiLXxfHs0n0N6G_N1B-WA9ElBklvrxZtukLRTsVH9ooZCiE5Na-TbPOFJZXejgm6xwEBCbrrRDLlUs5ZJynKowtHDIDPLnVGToHB5WSlmSytKTHz8zVD7PjAr9j72-KYOUcGBfjPuGG2_B6if9mH7sw_ykKSqwNcE5CbMZtjwj4XX9wvHawRIOop8QG6iQ4tbODWxioj-OM-O--a7Wa2flCCkPF5rQt1L7QhNow3-eSNs-DnlIslr6DM-wH6FJTE7Qtci7ul4mgEa9j0GQsb_NWD77axdyjdHCN2d5pAVRiaoV3tikTIIUph3Je_mrKbxhviPq2L6DKZSCFqI1dCqXcAkFdxPGSHJTOydwxIExTrtn_CEZnfTJg2auORURAncdge8mrHBTBYejSPxRlZdi0Oir8uKXH_XZp5bjMWiJ51W2Sy-o4qhesmH2nC4ehvLLvspCLS_L-bu0fIeImZR115RNmODaBpkXNYbLt7KM6qUzW-drKaqif3ga8Md_2fYxUdqjd6E9rf=w1364-h834-no");
 }
 .col-sm-4.project.stock {
-  background-image: url("/folios/code/img/stock_banner.png");
+  background-image: url("https://lh3.googleusercontent.com/qfXCMzcIxQ4ukYskiZ8u4v8OuWiIqyJ1GKgAtNp5J7kHf3nA7XkY1dmxERXv2fvYIEtf0lboQR5t5WiG7aXEnX9OKM2FYpQWL6ozasv9oV62SPM3YmzpyVgaIVVw8yL_EA2WHIZcNBR1P7iSK_VwtxCi9FBcXNASdmCkejAICsjraTzM0s5o6OzlOhGVhhYCJ82qT0iKFgiHtvMCcedc-Jw5AsEPhOSkyj_lJomMuf9AfZuaAbJqEVZVQpOLW_OlnE2Id0ahDAzImZV2SWXFcfOaIuZyIAZEjLkxJ3elMmuQsUGxX2LS7DfNrpXTVPsxdnk4sZQ4k3s-eXjmlrg1jjbXPwWRmXByoGNXeYmVMMvi-XAB1wIrL7-urx1afYdBh3R-53bNKo6be45VwVN38qd2RYI_7F4UJ4_0uLjdRv8BsdDJ5QnJmfYPWkzf9dJoYD-bveawUBvILlsUm88_RuBhv2-LCgDgTP4rk5ErpO1ssi9eK2I1fLfhTm6xXr9PUsJKFcsNFGfxkfyKOnjVxikaRcfNiDXYKzFNaUOo_Pzm93Qqg8wUAnSm3h8wuhfL09zfAyanx_flHnrORIq3vkGfwyaipYreXWBwCJZA=w1366-h700-no");
 }
 .col-sm-4.project.calc {
-  background-image: url("/folios/code/img/js_calculator_banner.PNG");
+  background-image: url("https://lh3.googleusercontent.com/bEFqnoQO3c_ZSlDP-j3e7RzvAzJlc6mkS0bqRiHKZ7PeIKsChras_Mv95MHapw5wx8kKbyN3QZywRdQgsNBwh0EjABGcwePngdfOQqcTK66wGVe6Ig7YQw0NgmFjJdOZUyWxPkYkzXuqmYZY-gdlJFXqdxSahTTjZY4ytRHR2uMOgSsQD6J1L-lsti1zpOzsjLCVh8dkMlPomA3otJBj0psK7bJOOuopixxL3i05Op4IIQcZ662A8ozOduvlP8BAVfuZ-Ve8MER24cEp87Shxj-LDc4DgCQ63elcLUszBcwbHJ9bnVNRTQTii2lvGeXwukrVeYbYvnK2fqshceu0WV_7A_mRVQcGdeTqbyRqvu59ewc8pSrqUQOKEcU6fFqdFUal12pSbg8-A0vVXb7ysAAx3tX5KPIN0GFVCFXBhYRHNtUQu7-1xbZYVLMZWurAUc0-UZTQ85A_pHXzmwYxRInBatfuc4YXYbzEFdUMP5PrwSsdbstSgZNUyX0KL6cH602CMcxW6Hn2vrPldcp7ZLjePf2gpwPGoRD4xXCd6AaHDeU56BngNuPv7ltswvqIh9a3U6jPCffgnIe023sq_wtRqOAQEjqBVjKTYZQM=w1364-h668-no");
 }
 .col-sm-4.project.moreCode {
-  background-image: url("/folios/code/img/more_code_projects.png");
+  background-image: url("https://lh3.googleusercontent.com/71DcrulDrPJ91GJpc07jedW3etUs5mEhcMqjfcAQ9vsIsj4s8vwsfPBpHdF3VsxAfbVMPfHZfjdJvSEDQqFmqxjy-N6YIOuP81YlUQkD92Y240UZKL2UQWbCDBxoQHBcWyehqLVV9tpcu1Bq8IqHkJ0aYKq9M-MpFMAn0wOiP9PkSm0QnPMgAtjxiBNkm65pmuMNJOzcg05JmWTD7Ox9AIxZx7u0O3g3TF4bkBQ2QLKgc6b2uuTCcZJqH9Y1I9niRyduFdIUzQjHtYauKgUBKEMhJPeEduRZxPq-iKblBORWGGXdqbJ2jeXcSK2EJ_WBsYLfs_KYO0wiZDFC_xXAXw080cqhlgJT0qbQevzMTs0mXuJp-Aq6CB0djOPDwJJ-PnNcYJijpp7wD4AQj81kWCxYSQatml4Ejbair5egHfF8gxU46i7e9UcUb9M5yLowY6kwM3q-a3q2dxT0f7KYwQqUl6iGcb9vK2VS0gmtbTk6VjMmskgYewaGfqEPW1TsXXekirUmXD_NVLlAEy38QqgZFjmv88IZUskLKNqgy2a2fCP-SiVRrjalrSSPlVZ1rjb-VYTkDZ_HNhqD5ewMqD003Ag6V2I9Kk4Uhvsu=w1364-h784-no");
 }
 
 .green {
