Fixed marget header image

--- a/css/style_folio.css
+++ b/css/style_folio.css
@@ -1,5 +1,5 @@
 .header-img-container {
-  background-image: url(http://oddert.github.io/folios/margate/img/1.jpg);
+  background-image: url("https://goo.gl/oEyn6i");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
