--- a/css/data-vis-projects.css
+++ b/css/data-vis-projects.css
@@ -1,7 +1,3 @@
-html, body {
-  font-family: arial, sans-serif;
-}
-
 .headline {
   box-shadow: 0px 0px 30px rgba(1, 1, 1, 0.1);
   border-radius: 20px;
@@ -57,6 +53,13 @@ html, body {
 }
 .project_card .content p {
   padding: 10px;
+}
+
+.footer {
+  margin-top: 100px;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0px -15px 20px rgba(1, 1, 1, 0.1);
 }
 
 /*# sourceMappingURL=public/css/data-vis-projects.css.map */
