--- a/scss/data-vis-projects.scss
+++ b/scss/data-vis-projects.scss
@@ -1,7 +1,3 @@
-html, body {
-  font-family: arial, sans-serif;
-}
-
 .headline {
   box-shadow: 0px 0px 30px rgba(1,1,1,0.1);
   border-radius: 20px;
@@ -29,28 +25,23 @@ html, body {
 .project_container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  // grid-auto-rows: 200px;
   grid-gap: 30px;
 }
 
 .project_card {
-  // border: 1px solid black;
   border-radius: 20px;
   padding: 20px;
   box-shadow: 0px 0px 20px rgba(1,1,1,0.1);
   h3 {
-    // color: red;
     margin: 0px 0px 20px 0px;
     font-family: 'Josefin sans', arial;
   }
   .content {
-    // border: 1px solid red;
     width: 100%;
     display: flex;
     align-items: center;
     .img_wrapper {
       width: 50%;
-      // height: 300px;
       flex-grow: 0;
       flex-shrink: 0;
       img {
@@ -62,4 +53,11 @@ html, body {
       padding: 10px;
     }
   }
+}
+
+.footer {
+  margin-top: 100px;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 0px -15px 20px rgba(1,1,1,0.1);
 }
