--- a/css/style.css
+++ b/css/style.css
@@ -271,9 +271,20 @@
 .col-sm-4.project.calc {
   background-image: url("https://lh3.googleusercontent.com/nR0v97SWwtuwPTVO7rQlQvr714egkEVG411GEPgy8zf00MJ8UwyLAL010wulzdBhaCUXRAEOv9r2r0w6e57cf_LhwjCbjR5xFsChWsvW-k9RjO95RaMXws0a5WQ9J4wrDbjt1luMJ2dxT_5l1n5F5Es18RQCNuVNKqBvXmOOfSljsizvY6iQl1iYkjkyfv1BAflAcTHOyhtdcEju4tSKckp58T7uEKDh_tqZglHCQH29zePbPxgaFosPYmgXcFqYCC_sbdP3GMEHYk1oxW_MUskoIe_scki0u8jzGQnyn-B2skc23J8IDTJabU4TqkXVX6ZncPAbJX-7jjcHheSyJ9L_bBRDOcXAOjRHZxZe3LceXqnGmGVbUyf_m1ynNErcNqDSthng6YYpYUgICeGluDNU1-DFUCNkNWz9_BLtP7Nx2VN1eYlq8E_GZwtASOzbBbrL0Xcdq2mN4R6yQjQoaD0Siu2ac6Gq1Rjns5NEycTn6BnTf_cvmCGm9JTI869uDMMcIfiWZwHfUghjFq-vbhXEk1G7LSv1pqleIa6WwJVj3-O2XYwFsA6bjUWX5AmtVNw7wZ06C3AomT0cPSvxVSh-66TnzIchYG7s3oH_=w1142-h541-no");
 }
+.col-sm-4.project.gameOfLife {
+  background-image: url("https://lh3.googleusercontent.com/6xuUnO_N6oRf4vuELUHDmwWFtiXFgBLQiBwDQhbCstZ_bxJokgNvemF3Z9F7j9zBKRYdKH-EPN7PRV3KwMEqTlR8vGcpYoMW7NvU2Hmmudj9Xw7ChukLG2eoQS-rH4MoPJ_hi6lO22lOGfLoYf1N712HT-e12A0bEmeajggDDqje0jVQN2RECA40cQ2dAQUYWVHFe98dS87sjndqiqQPPwBcfzq6mdL9zhIAVNkjbKPzDOl3Dqw-Xljjd9L12wTMaCiAGLIV-xJxAI_BGD2VgLXUUTVQ-JuMKSo1myJz1YnJq0h1zc6gTttIRLNJ4br96T48wHZBcCcl84kObnFkA1_t4iu6WTkIjT1YOgxyDXdMR2nZ97f3Z_oxco60XsmSyUqdyIaDuAaoe2cGoit2PgZ_G_Pp5k00-6JskuRByetWnw98to9PvYIX61bNTN1qYPgN8D-13Z9n-U9MF4DYrrTmnb7q8vPU1xwube2R4zUWf_zDdAYJHQt-2xtztVXPg2CyziNv0hvtBJaZcvMuMjFVy55neQhoDpNw7MBNSRFZLdXVWWAbZdUVMMBtlQ15EaGglXi0xHb1HDWHWuEXuufIUbe5_Ygu3nIEwoYo=w1366-h704-no");
+}
+.col-sm-4.project.datavis {
+  background-image: url("https://lh3.googleusercontent.com/4fGaPRroDV3qXt0QQfbXYCS4CbvUoMwmES2YFEB6ZzaFvL7dbJKeFkm3q6I3-DCI4BKPL-YbX0DiNIfMXF4fQypJib2Uc3uQYBVZ0jTAjPYgrAfDip1OvXkp5RbZevqC6_ptoWhG3IlDCvsQepTGN8eaG4MAh5IhOXQL7np-eRj5y5vOum3EjxmdNxmK1JLUEoI27NkAefTvrAix3e1ETLLv51QWFwvfy2RtvaowqwfUMdsSGadAkzmKmv6Qv8HxW61sdqV3Srche8V5A3Boi-uBTdN91ucKcGvfyd6aqUqXjHqjXNNSe-wP3QsUy7KIpeRXu3G4OfYem6RAl_qHDJOTd0MXsIP-lObXbY8Ji1r3DBmQ2XurHNnS-UpSa6c8WZRftLY_NXjwy4ZUWZyQ5wNBfcNBh_B8QM12i8sorjo8kx_EB2y8l2Xjtie2_V0Rr1A4Afl37Ijyh0QOApEUAlGnXFwvxjoekqKNscpCzolxP7IFGOrEsbxOg8_7_R5SrQOHlc1m8NSecrhS4DiocbnYjQiEIg4NLdaKIwuVBpuarLDpCzClHFWnRxhCgFFRjd3niTPQ4T6nuHnicuKgLCaN3SP76GRQQzkBPC8A=w1366-h736-no");
+}
+.col-sm-4.project.backend {
+  background-image: url("https://lh3.googleusercontent.com/wwND1Bj3aMerl-v7DzGqDNjBLNjD3mGc2S4Rfcip8Vy1z6Dzv4pi8ZeTXB1CLEa6KfVPOuE2G35cNmzc0bbOU58M0qEiK4Ymi7UPYFaKUUlbpMqUh4WsReLpXaxqzyHrkFT5jXGrssYcOKuAYDgr6d_be080ltxQX-elLutXeDw6a6kW96M5wRQqjpTqR3wHI-7l6Ar5gdwcWTAqWq5A5qeU10v5yM8jAqZZ_-TK-YDBFQhuwVWhU_gmL-7u_sojFEI15J7YqD9FKqNlBn9Mep65DGUzfzViqgly3aly4FiWe0qEWqcUYlEwkGtcNoAgdC3sBfK5hMW9nIVn6Ky78OUrCrD265lHWByjk2zUIVa5TSDUoHjuGJfqhfY1eXFW9bFSh6LI34AJkSmV9GtpUb779zlKWT7JX5lRRdIg0zfqWVsztUU7Yo3GhPdqtPusQAzMAOhA_iH5sK79m7nEnYnu6r-Bh0yufM0O5dEgJKa3OzTYY7LSeY_tYD0B95NS29KEZXopaO7HRuh7FIBJ-mZkmTfxNvZ-AkEFMDogfOpgt0Saq7pE7skFQ48AfxEf8gBV_WUnHqVV0g-6wpjhlYgSITk_884MBwHszA9N=w783-h409-no");
+}
 .col-sm-4.project.moreCode {
   background-image: url("https://lh3.googleusercontent.com/71DcrulDrPJ91GJpc07jedW3etUs5mEhcMqjfcAQ9vsIsj4s8vwsfPBpHdF3VsxAfbVMPfHZfjdJvSEDQqFmqxjy-N6YIOuP81YlUQkD92Y240UZKL2UQWbCDBxoQHBcWyehqLVV9tpcu1Bq8IqHkJ0aYKq9M-MpFMAn0wOiP9PkSm0QnPMgAtjxiBNkm65pmuMNJOzcg05JmWTD7Ox9AIxZx7u0O3g3TF4bkBQ2QLKgc6b2uuTCcZJqH9Y1I9niRyduFdIUzQjHtYauKgUBKEMhJPeEduRZxPq-iKblBORWGGXdqbJ2jeXcSK2EJ_WBsYLfs_KYO0wiZDFC_xXAXw080cqhlgJT0qbQevzMTs0mXuJp-Aq6CB0djOPDwJJ-PnNcYJijpp7wD4AQj81kWCxYSQatml4Ejbair5egHfF8gxU46i7e9UcUb9M5yLowY6kwM3q-a3q2dxT0f7KYwQqUl6iGcb9vK2VS0gmtbTk6VjMmskgYewaGfqEPW1TsXXekirUmXD_NVLlAEy38QqgZFjmv88IZUskLKNqgy2a2fCP-SiVRrjalrSSPlVZ1rjb-VYTkDZ_HNhqD5ewMqD003Ag6V2I9Kk4Uhvsu=w1364-h784-no");
 }
+
+/* [stock], [calc], gameOfLife, datavis, backend, [moreCode] */
 
 .green {
   background-color: rgba(39, 174, 97, 0.3);
