--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,11 @@
 .col-sm-4.project.recipies {
   background-image: url("https://lh3.googleusercontent.com/RfY0CNsB15ALplQp2u3ah-hW5aAqLhRl3nDT-Xqg-foYhrdiEnkO-_d1bEgsrKz8elP4TVCym9rYdIR-NH1A-jDiHsbgEh5i1xYKV7FsJu6Ho7r5jXYrKwcU5pxLNryjFOgzv7G95RLO1ZepoN6oGh4EMQNx6V5XhrSznc0ZL5O2Ob6mhpgNhcOk5LT7hpgYimDsjkfIgnWdYgtU5NeKFpnR7f2dUdZiTkgydkGgk9fOw526cMivFepp5vDXU84RYi3NtQ3mKEJcblV9QMErUnksOZFgiXEamti24g50R8pJ0BH__FGlGVwOOykW9VpUtG_rqTO9IwEZxupocACGcKisdecOpCjn3QoJTa5-sbAcYI4mVL5kK0TH2N_hZaZNhW1CulfK6xDRyYi7LWGQ-ie5loYflZqrVtGrj4wQfEomYtxUX8Ap5MagvjYlJ8H98-lDI_fvAq5PKS1KYTzACWMuH0mUeLKbCtdZJKRELa7Rtx0BzzJqkw0plvTdzQSRALAP3Uf7KUXuFxfocl5PBs4nCgkoI3IfUbR-C5O1aWHB1aMZnmj2yBJU-csu0OMx-k1Q1gD9nEBCkPMmApBPOTinnUDAs-pshuOQToz8=w1364-h1158-no");
 }
-.col-sm-4.project.XO {
+/* .col-sm-4.project.XO {
   background-image: url("https://lh3.googleusercontent.com/enyQ_Kw2Zf7aOL5xJmn66MEyQKb4LaOoyPkyL8rY7mei12iyHSahywUYZu_iZLAsslfFlbcB6RLShZjFEnYjXq-TItIqGspqgYc5-UEWiR1lzCffE7Pu9tOJNjsZJI2kOK97PaSA2DK57Ur5dnIiWTAW66zkTOjiJP_W1tCaEqgCjSSiWaI2mkWbe5MuHEdsap8KH1qBWgIrwI8jWz2G-U6YnTzNqs-i3d_dN9cbeOLyqJFsZ4I2QF1SEV2l8RcsZJV12edksChVLbtnTP6qLNfYd5DLd3YfbRgjALZsNCMSEvYwgVDU4auekHzIufKs-K9pap6X_V9HFKtQc7T7YiI47jzc-wlWeC6_32B2CEjY-7i_EdLOhWwtNySrA7sFnNilgxrC06_Qhoj4uz15JSG3DwEn3hz7GVeg6X7MD8_KQE2QpH3dIKnqmZEAahZOKCZkrk-D4wDR-2mLiZF2cW8j3SX6a6uEo_b2rY38SxZgJhtQhBcwyP5maKMmUFSdJMTgKYvHpO50E9Q712O2b30Bc0Pe2ghrDlJjiHOGp0jwl2GWBUsV60OwV1McqiEnrKZymjEgYT9Gz-rtUS6s92NUEKwVrk9aE52JEBNV=w1364-h956-no");
+} */
+.col-sm-4.project.pin {
+  background-image: url("/folios/code/img/pinapathy_banner.PNG");
 }
 .col-sm-4.project.simon {
   background-image: url("https://lh3.googleusercontent.com/aeYYRtFKS_NXMMJJjDztfWyvc2Bv18DcqaGug_QppTmyoEI7vkptGD7kxdKQuntq4jP4EZNQbq7VOnuq_MVVw9cctFAAsiLXxfHs0n0N6G_N1B-WA9ElBklvrxZtukLRTsVH9ooZCiE5Na-TbPOFJZXejgm6xwEBCbrrRDLlUs5ZJynKowtHDIDPLnVGToHB5WSlmSytKTHz8zVD7PjAr9j72-KYOUcGBfjPuGG2_B6if9mH7sw_ykKSqwNcE5CbMZtjwj4XX9wvHawRIOop8QG6iQ4tbODWxioj-OM-O--a7Wa2flCCkPF5rQt1L7QhNow3-eSNs-DnlIslr6DM-wH6FJTE7Qtci7ul4mgEa9j0GQsb_NWD77axdyjdHCN2d5pAVRiaoV3tikTIIUph3Je_mrKbxhviPq2L6DKZSCFqI1dCqXcAkFdxPGSHJTOydwxIExTrtn_CEZnfTJg2auORURAncdge8mrHBTBYejSPxRlZdi0Oir8uKXH_XZp5bjMWiJ51W2Sy-o4qhesmH2nC4ehvLLvspCLS_L-bu0fIeImZR115RNmODaBpkXNYbLt7KM6qUzW-drKaqif3ga8Md_2fYxUdqjd6E9rf=w1364-h834-no");
