--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@
 /* .col-sm-4.project.XO {
   background-image: url("https://lh3.googleusercontent.com/enyQ_Kw2Zf7aOL5xJmn66MEyQKb4LaOoyPkyL8rY7mei12iyHSahywUYZu_iZLAsslfFlbcB6RLShZjFEnYjXq-TItIqGspqgYc5-UEWiR1lzCffE7Pu9tOJNjsZJI2kOK97PaSA2DK57Ur5dnIiWTAW66zkTOjiJP_W1tCaEqgCjSSiWaI2mkWbe5MuHEdsap8KH1qBWgIrwI8jWz2G-U6YnTzNqs-i3d_dN9cbeOLyqJFsZ4I2QF1SEV2l8RcsZJV12edksChVLbtnTP6qLNfYd5DLd3YfbRgjALZsNCMSEvYwgVDU4auekHzIufKs-K9pap6X_V9HFKtQc7T7YiI47jzc-wlWeC6_32B2CEjY-7i_EdLOhWwtNySrA7sFnNilgxrC06_Qhoj4uz15JSG3DwEn3hz7GVeg6X7MD8_KQE2QpH3dIKnqmZEAahZOKCZkrk-D4wDR-2mLiZF2cW8j3SX6a6uEo_b2rY38SxZgJhtQhBcwyP5maKMmUFSdJMTgKYvHpO50E9Q712O2b30Bc0Pe2ghrDlJjiHOGp0jwl2GWBUsV60OwV1McqiEnrKZymjEgYT9Gz-rtUS6s92NUEKwVrk9aE52JEBNV=w1364-h956-no");
 } */
-.col-sm-4.project.pin {
+.col-sm-4.project.pinterest {
   background-image: url("/folios/code/img/pinapathy_banner.PNG");
 }
 .col-sm-4.project.simon {
