--- a/css/style.css
+++ b/css/style.css
@@ -404,11 +404,17 @@
   visibility: visible;
 }
 
+.mailto-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .mailto {
   flex: 1;
   border-radius: 20px;
-  border: 1px solid #2dcc70;
-  background-color: white;
+  border: 2px solid #2dcc70;
+  background-color: #F4F4F4;
   padding: 16px;
   transition: 0.2s linear;
 }
