--- a/css/style.css
+++ b/css/style.css
@@ -374,8 +374,9 @@
   /* width: 25%;
   float: left; */
   flex: 1;
+  width: auto;
   height: 100%;
-  display: inline-block;
+  /* display: inline-block; */
   text-align: center;
   transition: 0.25s linear;
 }
