--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@
   overflow: hidden;
 }
 .col-sm-4.project .cover {
-  background-color: rgba(1, 1, 1, 0.75);
+  /* background-color: rgba(1, 1, 1, 0.75); */
+  background-color: linear-gradient(0deg, rgba(1, 1, 1, 0.75), rgba(1,1,1,.2));
   transition: all 0.3s ease-in-out;
   height: 100%;
   width: 100%;
