--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,16 @@
   margin-top: 20px;
 }
 
+#blink {
+  animation: blink .7s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 1 }
+  50% { opacity: 0 }
+  100% { opacity: 1 }
+}
+
 .social_media_box-container > p {
   margin-top: 20px;
   font-size: 16px;
