--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,11 @@
 .col-sm-4.project.share_app {
   background-image: url("https://lh3.googleusercontent.com/8jni0NoCbLDxL0USpfO99wbz7psXCwaHr35Cp4WNIwKdRpcNTUkO9X14CVxXur0rZLpKkZjfArlQmnkut2754Koxi0qfuwDTf4S-gTLSoGfirJpM184SIQQ6_O0GvPRTHpFN4tdGF6i5kbZFQBcuXFhYhI4_Kfs91icWOri_CiyOEHBGPLOKKj48j2-ZyGVnXZJxzadbJdbgRK_AyZdHHT6DZ1271Da6veLyvpW86ubjhcEk2zei74zYWId7SZOXpFeGhO73c3UAbw-KvqNs76c-JFn61I-Cj4Wu46MBRsJScVLqmtgCmzcMeADf1XG13k2WoqQrk7Woiuv5-bb4MFVfRzI7nIslWmUQhyWy_yRteip0it4WjjPfCIChJJTDmAqbF9_bsgJzylgzA7bo9DXuoDiwQ7Wt78WaykBOD4eZRwG68gFrzwfK5-5ztGq3xN82g0dzBuwpvX-mULiHwIVJBFmgReeDqZKvfyLFoLivwx-ciNXihzlVn8Io9oFyrfUPLffmz_Y75kpBOAp6VcX2hI__XPWehUpa4WfokB9l4skx_5oTm63caM-Y4MWvB_cGJW32YhmfT5MjuBvMsWWwyQ603KrR7tYs8d_ygfjDZnTXpt8FtJ4GtgmbHMZV=w617-h321-no");
 }
+
+.col-sm-4.project.directions_app {
+  background-image: url("https://lh3.googleusercontent.com/aZs0XM24wIt4NpmJZz2y_VokQQUwENlchzhOhTT86OigcqTTgoxZZ-4qVNuuKPVDljN8qP3McwO-yMqhyCQlgCgKcWB0cHEkFWS5sXTrI-nu2m73NVh4CVTiyAdP-ham5CUpaqc0CFmFXjzZiv4ROuxZcCwY936Lb40WABZNrKG0nEbtcITS6-xjkXfkiqDpraHq1RewvGhW1i1WsjwYR83wWaBWt2Bud1Pu4wk7GIS7eG1ShyqchihqMvju2EaBmlZWvi0J8fiIfkcoWXGxNB5zScrjsmva4wqmCEsfWTjIcX2WXg6WQ-JX1H2eniFjIhAuzPy1inhLli9BrQxxDbgp-1LL28E6M50S9VHhgVIcGhpMy0WbPka-viDShTzmKLhxWGRZcgjwrSxwopfo27ykND6CA144GrDnYc1p6JoIM3d4MWlEjyehvGr1l8D4NGVM7Iw-Borsg1E__6BgnqutPJC9znKfAPwBnAUjXbccLBdCu6EiwMz-Foqj_LhiPdbOYDojoCFQ9PQbrvqAO1M5VFnHMiXpVln9rpMhtL2fpbyjA5Dqg7RD6yt7EfKSLbAVDoguLgZ1F5VnZCviJEUr9rtIHB90o9CDjdjNsp9gRDTGyHItxUTsrsSw22c5jrjNmPGw26kiL_kZ85ch0ybhAg=w2045-h1385-no");
+}
+
 .col-sm-4.project.datavis {
   background-image: url("https://lh3.googleusercontent.com/4fGaPRroDV3qXt0QQfbXYCS4CbvUoMwmES2YFEB6ZzaFvL7dbJKeFkm3q6I3-DCI4BKPL-YbX0DiNIfMXF4fQypJib2Uc3uQYBVZ0jTAjPYgrAfDip1OvXkp5RbZevqC6_ptoWhG3IlDCvsQepTGN8eaG4MAh5IhOXQL7np-eRj5y5vOum3EjxmdNxmK1JLUEoI27NkAefTvrAix3e1ETLLv51QWFwvfy2RtvaowqwfUMdsSGadAkzmKmv6Qv8HxW61sdqV3Srche8V5A3Boi-uBTdN91ucKcGvfyd6aqUqXjHqjXNNSe-wP3QsUy7KIpeRXu3G4OfYem6RAl_qHDJOTd0MXsIP-lObXbY8Ji1r3DBmQ2XurHNnS-UpSa6c8WZRftLY_NXjwy4ZUWZyQ5wNBfcNBh_B8QM12i8sorjo8kx_EB2y8l2Xjtie2_V0Rr1A4Afl37Ijyh0QOApEUAlGnXFwvxjoekqKNscpCzolxP7IFGOrEsbxOg8_7_R5SrQOHlc1m8NSecrhS4DiocbnYjQiEIg4NLdaKIwuVBpuarLDpCzClHFWnRxhCgFFRjd3niTPQ4T6nuHnicuKgLCaN3SP76GRQQzkBPC8A=w1366-h736-no");
 }
