changed order of some projects

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -243,7 +243,7 @@
           <div class="col-sm-4 project moreCode">
             <div class="cover"></div>
             <h2 class="icon_title">More Projects <i class="fa fa-angle-right"></i></h2>
-            <p class="icon_desc">Click here to see more code-related projects.</p>
+            <p class="icon_desc">Click here to see more front-end projects.</p>
           </div>
         </a>
       </div>
